--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <link rel="stylesheet" href="style.css" />
     <title>Gaetancode_ | Bienvenue</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <img src="/media/logo_transparent.png" alt="logo" />
+        <div class="logo">
+          <img src="/media/LOGO.png" alt="home_button" />
+        </div>
+        <ul>
+          <li class="nav-item"><a href="index.html">Blog</a></li>
+          <li class="nav-item"><a href="about.html">Catégories</a></li>
+          <li class="nav-item"><a href="contact.html">Archive</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
