--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
       rel="stylesheet"
     />
     <!-- link to css file -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="navbar.css" />
     <title>Gaetancode_ | Bienvenue</title>
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <!-- navbar -->
+      <nav id="navbar">
         <img src="/media/logo_transparent.png" alt="logo" />
-        <div class="logo">
-          <img src="/media/LOGO.png" alt="home_button" />
+        <div class="nav-element"></div>
+        <div class="home-button">
+          <a href="index.html"
+            ><img src="/media/LOGO.png" alt="home_button"
+          /></a>
         </div>
         <ul>
           <li class="nav-item"><a href="index.html">Blog</a></li>
