beginning of card

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="card">
+        <img src="" alt="" />
+      </div>
+    </main>
   </body>
 </html>
