--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <!-- link to css file -->
+    <link rel="stylesheet" href="card.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="navbar.css" />
     <title>Gaetancode_ | Bienvenue</title>
@@ -34,5 +35,26 @@
         </div>
       </nav>
     </header>
+    <main>
+      <!-- card box -->
+      <div class="card">
+        <!-- card picture only -->
+        <div class="card-picture">
+          <img src="./media/logitech-review.png" alt="picture of the card" />
+        </div>
+        <div class="decoration">
+          <img src="./media/vertical-bar.svg" alt="" />
+          <img src="./media/little-dot.svg" alt="" />
+        </div>
+        <div class="card-content">
+          <h2 class="card-title">LA souris des devs</h2>
+          <p class="card-description">
+            La logitech MX Master 3S est une référence dans le monde du dev et
+            voici pourquoi.
+          </p>
+          <p class="date">Publié le 08/04/24</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
