--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </div>
           <ul>
             <li class="nav-item"><a href="index.html">Blog</a></li>
-            <li class="nav-item"><a href="about.html">Catégories</a></li>
-            <li class="nav-item"><a href="contact.html">Archive</a></li>
+            <li class="nav-item"><a href="">Soon</a></li>
+            <li class="nav-item"><a href="">Soon</a></li>
           </ul>
         </div>
       </nav>
@@ -40,7 +40,9 @@
       <div class="card">
         <!-- card picture only -->
         <div class="card-picture">
-          <img src="./media/logitech-review.png" alt="picture of the card" />
+          <a href="logitech.html"
+            ><img src="./media/logitech-review.png" alt="picture of the card"
+          /></a>
         </div>
         <div class="decoration">
           <img src="./media/vertical-bar.svg" alt="" />
