added content for logitech article

--- a/logitech.html
+++ b/logitech.html
@@ -49,6 +49,7 @@
           sessions de codage.
         </p>
         <h2>Conception et Ergonomie</h2>
+        <img src="./media/71dWm6UPOiL._AC_SL1500_.jpg" alt="" />
         <p>
           La MX Master 3S arbore un design élégant et ergonomique qui s'adapte
           confortablement à la paume de la main, réduisant ainsi la fatigue
@@ -81,13 +82,17 @@
         </p>
         <h2>Conclusion</h2>
         <p>
-          En résumé, le Logitech MX Master 3S est une souris exceptionnelle qui
+          En résumé, le Logitech MX Master 3S est une très bonne souris qui
           allie design élégant, confort ergonomique, performances de pointe et
           fonctionnalités avancées. Que vous soyez un professionnel créatif, un
           utilisateur exigeant ou simplement à la recherche d'une souris haut de
           gamme pour améliorer votre expérience informatique, la MX Master 3S ne
           manquera pas de vous impressionner par sa polyvalence et sa fiabilité.
         </p>
+        <a href="https://amzn.to/43TbvPd"
+          >Retrouve la MX Master 3S sur Amazon
+        </a>
+        <img src="./media/amazon-bar.png" alt="" />
       </article>
     </main>
   </body>
